--- a/other.html
+++ b/other.html
@@ -105,7 +105,7 @@
 <div class="project-container">
     <div class="project-item fade-in">
         <div class="project-image">
-                    <a href="https://jingdabeautyspa.com/">
+                    <a href="https://kevinhong1.github.io/Robot/">
 
             <img src="images/project3-preview.jpg" alt="Port Jefferson Robotics"></a>
 
@@ -116,7 +116,7 @@
                 A website for Port Jefferson's robotics team built with Bootstrap, CSS3, JavaScript, HTML5.
             </p>
 
-            <a href="https://jingdabeautyspa.com/" class="view-website">View Website <span class="arrow">→</span></a>
+            <a href="https://kevinhong1.github.io/Robot/" class="view-website">View Website <span class="arrow">→</span></a>
         </div>
     </div>
 </div>
