--- a/other.html
+++ b/other.html
@@ -127,10 +127,10 @@
             A website built for MVP Home Services. Built with Bootstrap, CSS3, JavaScript, HTML5.
         </p>
 
-        <a href="https://youngsteamvisionaries.academy/" class="view-website">View Website <span class="arrow">→</span></a>
+        <a href="" class="view-website">View Website <span class="arrow">→</span></a>
     </div>
     <div class="project-image">
-        <a href="https://youngsteamvisionaries.academy/">
+        <a href="">
             <img src="images/project4-preview.jpg" alt="Young STEAM Visionaries Website">
         </a>
     </div>
@@ -138,7 +138,7 @@
 <div class="project-container">
     <div class="project-item fade-in">
         <div class="project-image">
-                    <a href="https://jingdabeautyspa.com/">
+                    <a href="">
 
             <img src="images/project5-preview.jpg" alt="Port Jefferson Robotics"></a>
 
@@ -149,7 +149,7 @@
                 A website built for Ah Lo's Flower shop. built with Bootstrap, CSS3, JavaScript, HTML5.
             </p>
 
-            <a href="https://jingdabeautyspa.com/" class="view-website">View Website <span class="arrow">→</span></a>
+            <a href="" class="view-website">View Website <span class="arrow">→</span></a>
         </div>
     </div>
 </div>
