--- a/other.html
+++ b/other.html
@@ -51,7 +51,7 @@
                 <div class="about-content">
                     <div class="about-text">
                         <h3>About Me</h3>
-                        <p>Hello! My name is Kevin Hong and I am a high school student in Port Jefferson, New York. I have a passion in Technology, Engineering, and Web Development. </p>
+                        <p>Hello! My name is Kevin Hong and I am a high school student in Port Jefferson, New York. I have a passion in Finance, Engineering, and Coding and wish to use my skills to help the world! </p>
                         <p>I always take pride in my work, and always try to give out projects to the best of my ability, and this applies to all aspects of my life as well. I am knowledgable of Bootstrap, CSS, Javascript, and HTML. Contact me at (631) 590-0209 or email me at kevin.hongyu@gmail.com if you wish me to make you a website!  </p>
                     </div>
                 </div>
