--- a/other.html
+++ b/other.html
@@ -130,7 +130,7 @@
         <a href="" class="view-website">View Website <span class="arrow">→</span></a>
     </div>
     <div class="project-image">
-        <a href="">
+        <a href="https://kevinhong1.github.io/MVP/">
             <img src="images/project4-preview.jpg" alt="Young STEAM Visionaries Website">
         </a>
     </div>
@@ -138,7 +138,7 @@
 <div class="project-container">
     <div class="project-item fade-in">
         <div class="project-image">
-                    <a href="">
+                    <a href="https://kevinhong1.github.io/MVP/">
 
             <img src="images/project5-preview.jpg" alt="Port Jefferson Robotics"></a>
 
